--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "99521b7a-f7ce-4235-a566-c38d230f6450"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
